# Scrap_web

./: .env.example  .gitignore  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  worker.py
backend/app/api/: auth.py  backups.py  items.py  recommendations.py  topics.py
backend/app/core/: config.py  security.py
backend/app/db/: init_db.py  models.py  session.py
backend/app/schemas/: ai.py  auth.py  items.py
backend/app/services/: __init__.py  ai.py  backup.py  capture.py  items.py  jobs.py  url_normalize.py
backend/tests/: test_ai_recommendations.py  test_auth_api.py  test_backup_service.py  test_capture_service.py  test_db_bootstrap.py  test_health.py  test_items_api.py  test_url_normalize.py
docs/superpowers/plans/: 2026-06-14-personal-web-archive-mvp.md
docs/superpowers/specs/: 2026-06-14-personal-web-archive-design.md
extension/: manifest.json  package-lock.json  package.json  vite.config.ts
extension/src/: background.ts  popup.html  popup.ts
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/features/auth/: ExtensionTokenPanel.tsx  Login.tsx
frontend/src/features/backup/: BackupStatusPanel.tsx
frontend/src/features/items/: ItemDetail.tsx  ItemList.test.ts  ItemList.tsx  SaveUrlDialog.tsx
frontend/src/features/recommendations/: RecommendationFeed.tsx
frontend/src/features/topics/: TopicTree.tsx
frontend/src/i18n/: display.ts
